add: responsive issue fix

--- a/about.html
+++ b/about.html
@@ -6,8 +6,7 @@
     <meta name="description" content="Hotex Luxury Hotel HTML5 Template" />
     <meta
       name="keywords"
-      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup"
-    />
+      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup" />
     <meta name="author" content="Hotex Luxury Hotel" />
 
     <title>Hotex Luxury Hotel HTML5 Template</title>
@@ -18,50 +17,41 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="images/logo/apple-touch-icon-57x57.png"
-    />
+      href="images/logo/apple-touch-icon-57x57.png" />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/logo/apple-touch-icon-72x72.png"
-    />
+      href="images/logo/apple-touch-icon-72x72.png" />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="images/logo/apple-touch-icon-76x76.png"
-    />
+      href="images/logo/apple-touch-icon-76x76.png" />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/logo/apple-touch-icon-114x114.png"
-    />
+      href="images/logo/apple-touch-icon-114x114.png" />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images/logo/apple-touch-icon-120x120.png"
-    />
+      href="images/logo/apple-touch-icon-120x120.png" />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="images/logo/apple-touch-icon-144x144.png"
-    />
+      href="images/logo/apple-touch-icon-144x144.png" />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images/logo/apple-touch-icon-152x152.png"
-    />
+      href="images/logo/apple-touch-icon-152x152.png" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/logo/apple-touch-icon-180x180.png"
-    />
+      href="images/logo/apple-touch-icon-180x180.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -82,8 +72,7 @@
     <div id="preloader">
       <div
         id="preloader-status"
-        style="background-image: url('images/icon/preeloader.gif')"
-      ></div>
+        style="background-image: url('images/icon/preeloader.gif')"></div>
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
@@ -276,8 +265,7 @@
     <!-- Page Header Start !-->
     <div
       class="page-breadcrumb-area page-bg"
-      style="background-image: url('images/hero-section/slider-2.jpg')"
-    >
+      style="background-image: url('images/hero-section/slider-2.jpg')">
       <div class="page-overlay"></div>
       <div class="shape">
         <img src="images/shape/slider-2.png" alt="breadcrumb-shape" />
@@ -291,8 +279,9 @@
           <div class="col-md-12">
             <div
               class="breadcrumb-wrapper py-215 my-95 mx-90"
-              style="background-image: url(images/hero-section/v-2/image-1.jpg)"
-            >
+              style="
+                background-image: url(images/hero-section/v-2/image-1.jpg);
+              ">
               <div class="breadcrumb-list">
                 <ul>
                   <li><a href="index.html">Home</a></li>
@@ -313,7 +302,7 @@
         <img src="images/shape/leaf-2.png" alt="leaf" />
       </div>
       <div class="container">
-        <div class="row gy-5">
+        <div class="row">
           <div class="col-xl-6 col-lg-12">
             <div class="about-image-card style-1">
               <div class="image-wrapper">
@@ -326,14 +315,12 @@
                   <div class="shape">
                     <img
                       src="images/shape/image-card-shape.png"
-                      alt="image-card-shape"
-                    />
+                      alt="image-card-shape" />
                   </div>
                   <div class="video-popup-btn">
                     <a
                       href="https://www.youtube.com/watch?v=SZEflIVnhH8"
-                      class="mfp-iframe video-play"
-                    >
+                      class="mfp-iframe video-play">
                       <i class="fa-solid fa-play" aria-hidden="true"></i>
                     </a>
                   </div>
@@ -425,8 +412,7 @@
           class="inner-wrapper py-80"
           style="
             background-image: url(images/section-bg/feature-facilities.jpg);
-          "
-        >
+          ">
           <div class="overlay"></div>
           <div class="row">
             <div class="col-xxl-5 col-xl-6">
@@ -500,8 +486,7 @@
                 <div class="icon">
                   <img
                     src="images/icon/info-card/food-covered.svg"
-                    alt="icon"
-                  />
+                    alt="icon" />
                 </div>
                 <div class="content">
                   <h3 class="title">Parking Space</h3>
@@ -624,7 +609,7 @@
     </div>
     <!-- Testimonial area styel-1 end -->
     <!-- Team area Start -->
-    <div class="team-area style-1 py-140">
+    <div class="team-area style-1 about-page py-140">
       <div class="shape">
         <img src="images/shape/leaf.png" alt="image-card-shape" />
       </div>
@@ -641,8 +626,7 @@
               <div class="image-wrapper">
                 <img
                   src="images/team-member/v-1/image-1.jpg"
-                  alt="team member"
-                />
+                  alt="team member" />
                 <div class="overlay"></div>
               </div>
               <div class="content-wrapper">
@@ -673,8 +657,7 @@
               <div class="image-wrapper">
                 <img
                   src="images/team-member/v-1/image-2.jpg"
-                  alt="team member"
-                />
+                  alt="team member" />
                 <div class="overlay"></div>
               </div>
               <div class="content-wrapper">
@@ -705,8 +688,7 @@
               <div class="image-wrapper">
                 <img
                   src="images/team-member/v-1/image-3.jpg"
-                  alt="team member"
-                />
+                  alt="team member" />
                 <div class="overlay"></div>
               </div>
               <div class="content-wrapper">
@@ -740,8 +722,7 @@
     <!--- Start Footer !-->
     <footer
       class="footer style-2"
-      style="background-image: url('images/section-bg/footer-1.png')"
-    >
+      style="background-image: url('images/section-bg/footer-1.png')">
       <div class="overlay"></div>
       <div class="bottom-image">
         <img src="images/logo/logo-text.png" alt="footer background" />
@@ -756,8 +737,7 @@
                     <a href="index.html">
                       <img
                         src="images/logo/footer-logo.png"
-                        alt="Footer Logo"
-                      />
+                        alt="Footer Logo" />
                     </a>
                   </div>
                   <div class="footer-contact mt-90">
@@ -797,56 +777,46 @@
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-1.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-2.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-3.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-4.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-5.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
               </div>
             </div>
